--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/tarte-normande.html">Tarte normande</a></li>
+            <li><a href="./recipes/caesar-salad.html">Caesar salad</a></li>
+        </ul>
     </body>
 
 </html>
