--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Caesar Salad</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Caesar Salad</h1>
