--- a/recipes/tarte-normande.html
+++ b/recipes/tarte-normande.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tarte Normande</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Tarte Normande</h1>
