change layout of recipe website

--- a/recipes/tarte-normande.html
+++ b/recipes/tarte-normande.html
@@ -9,8 +9,11 @@
         <h1>Tarte Normande</h1>
         <img src="https://assets.afcdn.com/recipe/20180713/80985_w1000h1333c1cx1944cy2592cxb3888cyb5184.webp" alt="Tarte normande">
         <h2>Description</h2>
-        <p>Normandy tart is a shortcrust pastry-based (pâte brisée) variant of the apple tart made in Normandy filled with apples, sliced almonds and sugar, topped with creamy egg custard and baked until the topping is slightly caramelised. It is also known in French as la Tarte Normande.</p>
-        <p>This is a dish made in one of two sizes, one of which is just under one third of a metre (approximately one foot) in diameter, and a smaller variety, between a half and one third the diameter of the larger type.</p>
+        <div class="description-container">
+            <p>Normandy tart is a shortcrust pastry-based (pâte brisée) variant of the apple tart made in Normandy filled with apples, sliced almonds and sugar, topped with creamy egg custard and baked until the topping is slightly caramelised. It is also known in French as la Tarte Normande.</p>
+            <p>This is a dish made in one of two sizes, one of which is just under one third of a metre (approximately one foot) in diameter, and a smaller variety, between a half and one third the diameter of the larger type.</p>
+        </div>
+        
         <h2>Ingredients</h2>
         <ul>
             <li>Pastry</li>
